[package]
name = "sh-input"
description = "Portable input-injection trait, coordinate mapping, and mock implementations for Streamhaul."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
sh-protocol = { path = "../sh-protocol" }
sh-types = { path = "../sh-types" }
thiserror.workspace = true

[dev-dependencies]
proptest.workspace = true

[lints]
workspace = true
