[package]
name = "sh-protocol"
description = "Streamhaul Protocol (SHP) wire format: headers, framing, capability negotiation."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
sh-types = { path = "../sh-types" }
thiserror.workspace = true
bitflags.workspace = true

[dev-dependencies]
proptest.workspace = true

[lints]
workspace = true
