[package]
name = "sh-types"
description = "Core shared types for Streamhaul: identifiers, units, and the crate-wide error type."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
thiserror.workspace = true

[lints]
workspace = true
