# cargo-fuzz crate for sh-crypto. This is its OWN workspace (note the empty [workspace] table)
# and is excluded from the main workspace, so `cargo build/clippy/test --workspace` and CI never
# touch it. Run with a nightly toolchain: `cargo +nightly fuzz run sig_decode`
# (see crates/sh-crypto/fuzz/README.md).
[package]
name = "sh-crypto-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.sh-crypto]
path = ".."

[[bin]]
name = "sig_decode"
path = "fuzz_targets/sig_decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "identity_decode"
path = "fuzz_targets/identity_decode.rs"
test = false
doc = false
bench = false

[workspace]
